bin/testsuite/tests/compiler/src/errors/compiler76.swg
#global testerror "Err0748"
var a: u32
var b: a
